--- a/src/app/full-layout/full-layout.component.html
+++ b/src/app/full-layout/full-layout.component.html
@@ -90,26 +90,22 @@
       <div id="sidebar-menu">
         <ul>
           <li class="text-muted menu-title">Navigation</li>
-
+          <!--<li class="has_sub">-->
+            <!--<a href="javascript:void(0);" class="waves-effect"><i class="zmdi zmdi-invert-colors"></i> <span> User Interface </span>-->
+              <!--<span class="menu-arrow"></span></a>-->
+            <!--<ul class="list-unstyled">-->
+              <!--<li><a href="ui-buttons.html">Buttons</a></li>-->
+              <!--<li><a href="ui-cards.html">Cards</a></li>-->
+            <!--</ul>-->
+          <!--</li>-->
           <li>
             <a href="index.html" class="waves-effect active"><i class="zmdi zmdi-view-dashboard"></i>
               <span> Dashboard </span> </a>
           </li>
-
-          <li>
-            <a href="typography.html" class="waves-effect"><i class="zmdi zmdi-format-underlined"></i>
-              <span> Typography </span> </a>
+          <li *ngFor="let c of components">
+            <a href="#" class="waves-effect " [routerLink]="c.url">
+              <span> {{c.name}} </span> </a>
           </li>
-
-          <li class="has_sub">
-            <a href="javascript:void(0);" class="waves-effect"><i class="zmdi zmdi-invert-colors"></i> <span> User Interface </span>
-              <span class="menu-arrow"></span></a>
-            <ul class="list-unstyled">
-              <li><a href="ui-buttons.html">Buttons</a></li>
-              <li><a href="ui-cards.html">Cards</a></li>
-            </ul>
-          </li>
-
         </ul>
         <div class="clearfix"></div>
       </div>
@@ -122,6 +118,7 @@
   <!-- Left Sidebar End -->
 
   <div class="content-page">
+
     <!-- Start content -->
     <div class="content">
       <router-outlet></router-outlet>
