--- a/src/app/full-layout/full-layout.component.html
+++ b/src/app/full-layout/full-layout.component.html
@@ -1,4 +1,3 @@
-
 <!-- Begin page -->
 <div id="wrapper">
 
@@ -89,33 +88,43 @@
       <!--- Sidemenu -->
       <div id="sidebar-menu">
 
-             <ul>
-               <li *ngFor="let component of components" class="has_sub">
-                 <a href="javascript:void(0);" class="waves-effect">
-                    <span>{{component.name}}</span>
-                   <span class="menu-arrow"></span></a>
-                 <ul class="list-unstyled">
-                   <li *ngFor="let child of component.childrens" >
-                       <a [routerLink]="child.url">{{child.name}}</a></li>
+        <ul>
+          <li *ngFor="let component of components" class="has_sub">
+            <a href="javascript:void(0);" class="waves-effect">
+              <span>{{component.name}}</span>
+              <span class="menu-arrow"></span></a>
+            <ul class="list-unstyled">
+              <li *ngFor="let child of component.childrens">
+                <a [routerLink]="child.url">{{child.name}}</a></li>
 
-                 </ul>
-               </li>
-              <li  class="has_sub">
-                   <a href="javascript:void(0);" class="waves-effect">
-                      <span>Recipients</span>
-                     <span class="menu-arrow"></span></a>
-                   <ul class="list-unstyled">
-                     <li >
-                         <a [routerLink]="['/production/recipient/list']">Lister des recipients</a>
-                     </li>
-                     <li >
-                         <a [routerLink]="['/production/recipient/ajouter']">Ajouter</a>
-                     </li>
+            </ul>
+          </li>
+          <li class="has_sub">
+            <a href="javascript:void(0);" class="waves-effect">
+              <span>Recipients</span>
+              <span class="menu-arrow"></span></a>
+            <ul class="list-unstyled">
+              <li>
+                <a [routerLink]="['/production/recipient/list']">Lister des recipients</a>
+              </li>
+              <li>
+                <a [routerLink]="['/production/recipient/ajouter']">Ajouter</a>
+              </li>
 
-                   </ul>
-                 </li>
+            </ul>
+          </li>
+          <li class="has_sub">
+            <a href="javascript:void(0);" class="waves-effect">
+              <span>Matière Première</span>
+              <span class="menu-arrow"></span></a>
+            <ul class="list-unstyled">
+              <li>
+                <a [routerLink]="['/stockmp']">Stock Matière Première</a>
+              </li>
 
-             </ul>
+            </ul>
+          </li>
+        </ul>
 
         <div class="clearfix"></div>
       </div>
@@ -141,7 +150,6 @@
     </a>
     <h4 class="">Notifications</h4>
     <div class="notification-list nicescroll">
-
 
 
       <ul class="list-group list-no-border user-list">
