almost done with matiere premiere display

--- a/src/app/full-layout/full-layout.component.html
+++ b/src/app/full-layout/full-layout.component.html
@@ -89,16 +89,16 @@
       <div id="sidebar-menu">
 
         <ul>
-          <li *ngFor="let component of components" class="has_sub">
-            <a href="javascript:void(0);" class="waves-effect">
-              <span>{{component.name}}</span>
-              <span class="menu-arrow"></span></a>
-            <ul class="list-unstyled">
-              <li *ngFor="let child of component.childrens">
-                <a [routerLink]="child.url">{{child.name}}</a></li>
+          <!--<li *ngFor="let component of components" class="has_sub">-->
+            <!--<a href="javascript:void(0);" class="waves-effect">-->
+              <!--<span>{{component.name}}</span>-->
+              <!--<span class="menu-arrow"></span></a>-->
+            <!--<ul class="list-unstyled">-->
+              <!--<li *ngFor="let child of component.childrens">-->
+                <!--<a [routerLink]="child.url">{{child.name}}</a></li>-->
 
-            </ul>
-          </li>
+            <!--</ul>-->
+          <!--</li>-->
           <li class="has_sub">
             <a href="javascript:void(0);" class="waves-effect">
               <span>Recipients</span>
@@ -119,7 +119,7 @@
               <span class="menu-arrow"></span></a>
             <ul class="list-unstyled">
               <li>
-                <a [routerLink]="['/stockmp']">Stock Matière Première</a>
+                <a [routerLink]="['/mp/stock']">Stock Matière Première</a>
               </li>
 
             </ul>
