--- a/src/app/matiere-premiere/stock-mp/stock-mp.component.html
+++ b/src/app/matiere-premiere/stock-mp/stock-mp.component.html
@@ -1,3 +1,46 @@
-<p>
-  stock-mp works!
-</p>
+<div class="row">
+  <div class="col-sm-12">
+    <div class="panel">
+      <div class="panel-body">
+        <div class="row">
+          <div class="col-sm-6">
+            <div class="m-b-30">
+              <button id="addMP" class="btn btn-primary waves-effect waves-light" >Ajouter une Matiere Premiere <i class="fa fa-plus"></i></button>
+            </div>
+          </div>
+        </div>
+
+        <div class="editable-responsive">
+          <table class="table table-striped" id="stockMP">
+            <thead>
+            <tr>
+              <th>ID</th>
+              <th>Nom</th>
+              <th>Coût moyen</th>
+              <th>Quantité Disponible</th>
+              <th>Actions</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr class="gradeX" *ngFor="let m of mp">
+              <td>{{m.matiere_premiere_id}}</td>
+              <td>{{m.nom}}</td>
+              <td>{{m.prix_moyen}}</td>
+              <td>{{m.quantite_dispo}}</td>
+              <td class="actions">
+                &nbsp; <a href="#" class="on-default edit-row"><i class="fa fa-pencil"></i></a> &nbsp;
+                <a href="#" class="on-default remove-row"><i class="fa fa-trash-o"></i></a>
+              </td>
+            </tr>
+
+            </tbody>
+          </table>
+        </div>
+      </div>
+      <!-- end: panel body -->
+
+    </div> <!-- end panel -->
+  </div> <!-- end col-->
+</div>
+<!-- end row -->
+
