--- a/src/app/matiere-premiere/stock-mp/stock-mp.component.html
+++ b/src/app/matiere-premiere/stock-mp/stock-mp.component.html
@@ -5,7 +5,7 @@
         <div class="row">
           <div class="col-sm-6">
             <div class="m-b-30">
-              <button id="addMP" class="btn btn-primary waves-effect waves-light" >Ajouter une Matiere Premiere <i class="fa fa-plus"></i></button>
+              <button id="addMP" class="btn btn-primary waves-effect waves-light" data-toggle="modal" data-target="#add-mp-modal">Ajouter une Matiere Premiere <i class="fa fa-plus"></i></button>
             </div>
           </div>
         </div>
@@ -43,4 +43,40 @@
   </div> <!-- end col-->
 </div>
 <!-- end row -->
+<!--Modal-->
+<div id="add-mp-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true" (click)="cleanAddMPModal()">X</button>
+        <h4 class="modal-title" id="myModalLabel">Ajouter une Matiere Premiere</h4></div>
+      <div class="modal-body">
+        <form class="form-horizontal">
+          <div class="form-group col-xs-8">
+            <label class="col-md-12"> <span class="help">Matiere Premiere</span></label>
+            <div class="col-md-12">
+              <input type="text" class="form-control form-control-line" placeholder="Enter le Nom de la Matiere Premiere à ajouter" [value]="mpName" (input)="mpName = $event.target.value">
+            </div>
+          </div>
+          <div class="form-group col-xs-4">
+            <label class="col-md-12"> <span class="help">Unité</span></label>
+            <div class="col-md-12">
+              <select [(ngModel)]="selectedUnit" class="form-control" name="unitSelect">
+                <option *ngFor="let u of units, let i=index" [ngValue]="u">{{u.nom}} ({{u.indice}})</option>
+              </select>
+            </div>
+          </div>
+          <div class="form-group" style="text-align: center" >
+            <button *ngIf="mpName===''" disabled class="btn btn-danger" style="margin-top: 0.5%">Confirmer &nbsp; <div class="glyphicon glyphicon-chevron-right"></div></button>
+            <button *ngIf="mpName" class="btn btn-success" style="margin-top: 0.5%" data-dismiss="modal" (click)="addMP()">Confirmer &nbsp; <div class="glyphicon glyphicon-chevron-right"></div></button>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-info waves-effect" data-dismiss="modal" (click)="cleanAddMPModal()">Close
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
 
