Recipient and emballage

--- a/src/app/full-layout/full-layout.component.html
+++ b/src/app/full-layout/full-layout.component.html
@@ -106,10 +106,25 @@
                      <span class="menu-arrow"></span></a>
                    <ul class="list-unstyled">
                      <li >
-                         <a [routerLink]="['/production/recipient/list']">Lister des recipients</a>
+                         <a [routerLink]="['/production/recipient/list']">Liste des recipients</a>
                      </li>
                      <li >
-                         <a [routerLink]="['/production/recipient/ajouter']">Ajouter</a>
+                         <a [routerLink]="['/production/recipient/ajouter']">Ajouter un récipient</a>
+                     </li>
+
+                   </ul>
+                 </li>
+
+              <li  class="has_sub">
+                   <a href="javascript:void(0);" class="waves-effect">
+                      <span>Emballages</span>
+                     <span class="menu-arrow"></span></a>
+                   <ul class="list-unstyled">
+                     <li >
+                         <a [routerLink]="['/production/emballage/list']">Liste des Emballages</a>
+                     </li>
+                     <li >
+                         <a [routerLink]="['/production/emballage/ajouter']">Ajouter un emballage</a>
                      </li>
 
                    </ul>
