enrigistrer achat form done, submitting doesn't work yet

--- a/src/app/full-layout/full-layout.component.html
+++ b/src/app/full-layout/full-layout.component.html
@@ -138,6 +138,9 @@
               <li>
                 <a [routerLink]="['/mp/stock']">Stock Matière Première</a>
               </li>
+              <li>
+                <a [routerLink]="['/mp/achat']">Achats Matière Première</a>
+              </li>
 
             </ul>
           </li>
