--- a/src/app/full-layout/full-layout.component.html
+++ b/src/app/full-layout/full-layout.component.html
@@ -118,6 +118,20 @@
 
                    </ul>
                  </li>
+                 <li  class="has_sub">
+                   <a href="javascript:void(0);" class="waves-effect">
+                      <span>Produits</span>
+                     <span class="menu-arrow"></span></a>
+                   <ul class="list-unstyled">
+                     <li >
+                         <a [routerLink]="['/production/produit/list']">Liste des Produits</a>
+                     </li>
+                     <li >
+                         <a [routerLink]="['/production/produit/ajouter']">Ajouter un Produit</a>
+                     </li>
+
+                   </ul>
+                 </li>
 
           <!--<li *ngFor="let component of components" class="has_sub">-->
             <!--<a href="javascript:void(0);" class="waves-effect">-->
@@ -141,7 +155,6 @@
               <li>
                 <a [routerLink]="['/mp/achat']">Achats Matière Première</a>
               </li>
-
             </ul>
           </li>
         </ul>
