--- a/src/app/matiere-premiere/ajout-achat-mp/ajout-achat-mp.component.html
+++ b/src/app/matiere-premiere/ajout-achat-mp/ajout-achat-mp.component.html
@@ -15,7 +15,7 @@
     <div class="form-group row">
       <label class="col-sm-3 control-label">Quantité</label>
       <div class="col-sm-4">
-        <input type="text" class="form-control" placeholder="0">
+        <input type="number" class="form-control" placeholder="0" [(ngModel)]="quantite" name="quantite">
       </div>
       <div class="col-sm-2">
         <select class="form-control" [(ngModel)]="selectedUnit" name="unitSelect">
@@ -28,7 +28,7 @@
       <label class="col-sm-3 control-label">Prix</label>
       <div class="col-sm-6">
         <div class="input-group">
-          <input type="number" class="form-control" placeholder="0.000">
+          <input type="number" class="form-control" placeholder="0.000" name="prix" [(ngModel)]="prix">
           <span class="input-group-addon">DT</span>
         </div>
       </div>
@@ -36,7 +36,7 @@
     <div class="form-group row">
       <label class="col-sm-3 control-label">Date</label>
       <div class="col-sm-6">
-          <input type="date" class="form-control">
+          <input type="date" class="form-control" name="date" [(ngModel)]="date">
       </div>
     </div>
     <div class="form-group row">
@@ -53,7 +53,7 @@
     <div class="form-group">
       <div class="col-sm-7"></div>
       <div class="col-sm-2">
-        <button class="btn btn-success btn-primary waves-effect waves-light" style="margin-left: 25%"><div class="glyphicon glyphicon-ok"></div> &nbsp;Enregistrer</button>
+        <button class="btn btn-success btn-primary waves-effect waves-light" style="margin-left: 25%" (click)="add()"><div class="glyphicon glyphicon-ok"></div> &nbsp;Enregistrer</button>
       </div>
       <a class="btn btn-danger btn-primary waves-effect waves-light" href="#/mp/achat" style="margin-left: 1%"><div class="glyphicon glyphicon-remove"></div> &nbsp;Annuler</a>
     </div>
