--- a/src/app/matiere-premiere/stock-mp/stock-mp.component.html
+++ b/src/app/matiere-premiere/stock-mp/stock-mp.component.html
@@ -87,7 +87,8 @@
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">X</button>
         <h4 class="modal-title" id="myModalLabel" >Historique des operations sur "{{selectedMP.nom}}"</h4></div>
       <div class="modal-body">
-        <div class="editable-responsive">
+        <h1 *ngIf="!selectedMP.operations.length">Pas encore d'operations pour {{selectedMP.nom}}</h1>
+        <div class="editable-responsive" *ngIf="selectedMP.operations.length">
           <table class="table table-striped" id="stockMP">
             <thead>
             <tr>
@@ -117,7 +118,6 @@
               <!--fournisseur-->
               <td *ngIf="o.achat">{{o.achat.fournisseur.nom}}</td>
               <td *ngIf="!o.achat">--</td>
-
               <!--end fournisseur-->
 
             </tr>
