fixes in add achat mp form

--- a/src/app/matiere-premiere/stock-mp/stock-mp.component.html
+++ b/src/app/matiere-premiere/stock-mp/stock-mp.component.html
@@ -26,7 +26,7 @@
               <td>{{m.matiere_premiere_id}}</td>
               <td>{{m.nom}}</td>
               <td>{{m.prix_moyen}}</td>
-              <td>{{m.quantite_dispo}}</td>
+              <td>{{m.quantite_dispo}} {{m.unite.indice}}</td>
               <td class="actions">
                 <a href="#" class="on-default edit-row" (click)="selectMP(i)" data-toggle="modal" data-target="#list-op-modal"><i class="fa fa-align-left"></i></a> &nbsp;
               </td>
