--- a/src/app/matiere-premiere/ajout-achat-mp/ajout-achat-mp.component.html
+++ b/src/app/matiere-premiere/ajout-achat-mp/ajout-achat-mp.component.html
@@ -144,7 +144,7 @@
         </form>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-info waves-effect" data-dismiss="modal" (click)="cleanAddMPModal()">Close
+        <button type="button" class="btn btn-info waves-effect" data-dismiss="modal" (click)="cleanAddFournisseurModal()">Close
         </button>
       </div>
     </div>
