--- a/src/app/matiere-premiere/achat-mp/achat-mp.component.html
+++ b/src/app/matiere-premiere/achat-mp/achat-mp.component.html
@@ -11,7 +11,7 @@
         </div>
 
         <div class="editable-responsive">
-          <table class="table table-striped" id="stockMP">
+          <table class="table table-striped stockMP">
             <thead>
             <tr>
               <th>ID</th>
