--- a/src/app/matiere-premiere/stock-mp/stock-mp.component.html
+++ b/src/app/matiere-premiere/stock-mp/stock-mp.component.html
@@ -47,7 +47,7 @@
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
       <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true" (click)="cleanAddMPModal()">X</button>
+        <button type="button" class="close"  aria-hidden="true" (click)="cleanAddMPModal()">X</button>
         <h4 class="modal-title" id="myModalLabel">Ajouter une Matiere Premiere</h4></div>
       <div class="modal-body">
         <form class="form-horizontal">
@@ -67,7 +67,7 @@
           </div>
           <div class="form-group" style="text-align: center" >
             <button *ngIf="mpName===''" disabled class="btn btn-danger" style="margin-top: 0.5%">Confirmer &nbsp; <div class="glyphicon glyphicon-chevron-right"></div></button>
-            <button *ngIf="mpName" class="btn btn-success" style="margin-top: 0.5%" data-dismiss="modal" (click)="addMP()">Confirmer &nbsp; <div class="glyphicon glyphicon-chevron-right"></div></button>
+            <button *ngIf="mpName" class="btn btn-success" style="margin-top: 0.5%" (click)="addMP()">Confirmer &nbsp; <div class="glyphicon glyphicon-chevron-right"></div></button>
           </div>
         </form>
       </div>
