--- a/src/app/full-layout/full-layout.component.html
+++ b/src/app/full-layout/full-layout.component.html
@@ -132,6 +132,20 @@
 
                    </ul>
                  </li>
+                 <li  class="has_sub">
+                   <a href="javascript:void(0);" class="waves-effect">
+                      <span>Lots</span>
+                     <span class="menu-arrow"></span></a>
+                   <ul class="list-unstyled">
+                     <li >
+                         <a [routerLink]="['/production/lot/list']">Liste des Lots</a>
+                     </li>
+                     <li >
+                         <a [routerLink]="['/production/lot/ajouter']">Ajouter un Lot</a>
+                     </li>
+
+                   </ul>
+                 </li>
 
           <!--<li *ngFor="let component of components" class="has_sub">-->
             <!--<a href="javascript:void(0);" class="waves-effect">-->
