fixing full layout

--- a/src/app/full-layout/full-layout.component.html
+++ b/src/app/full-layout/full-layout.component.html
@@ -61,7 +61,7 @@
   <div class="left side-menu">
     <div class="sidebar-inner slimscrollleft">
 
-      <!-- User -->
+<!--       User
       <div class="user-box">
         <div class="user-img">
           <img src="assets/images/users/avatar-1.jpg" alt="user-img" title="Mat Helme"
@@ -83,7 +83,7 @@
           </li>
         </ul>
       </div>
-      <!-- End User -->
+       End User -->
 
       <!--- Sidemenu -->
       <div id="sidebar-menu">
