--- a/src/app/full-layout/full-layout.component.html
+++ b/src/app/full-layout/full-layout.component.html
@@ -6,7 +6,7 @@
 
     <!-- LOGO -->
     <div class="topbar-left">
-      <a href="index.html" class="logo"><span>Admin<span>to</span></span><i class="zmdi zmdi-layers"></i></a>
+      <a href="javascript:" class="logo"><span>Vaye<span>tek</span></span><i class="zmdi zmdi-layers"></i></a>
     </div>
 
     <!-- Button mobile view to collapse sidebar menu -->
@@ -61,29 +61,29 @@
   <div class="left side-menu">
     <div class="sidebar-inner slimscrollleft">
 
-<!--       User
-      <div class="user-box">
-        <div class="user-img">
-          <img src="assets/images/users/avatar-1.jpg" alt="user-img" title="Mat Helme"
-               class="img-circle img-thumbnail img-responsive">
-          <div class="user-status offline"><i class="zmdi zmdi-dot-circle"></i></div>
-        </div>
-        <h5><a href="#">Mat Helme</a></h5>
-        <ul class="list-inline">
-          <li>
-            <a href="#">
-              <i class="zmdi zmdi-settings"></i>
-            </a>
-          </li>
+      <!--       User
+            <div class="user-box">
+              <div class="user-img">
+                <img src="assets/images/users/avatar-1.jpg" alt="user-img" title="Mat Helme"
+                     class="img-circle img-thumbnail img-responsive">
+                <div class="user-status offline"><i class="zmdi zmdi-dot-circle"></i></div>
+              </div>
+              <h5><a href="#">Mat Helme</a></h5>
+              <ul class="list-inline">
+                <li>
+                  <a href="#">
+                    <i class="zmdi zmdi-settings"></i>
+                  </a>
+                </li>
 
-          <li>
-            <a href="#" class="text-custom">
-              <i class="zmdi zmdi-power"></i>
-            </a>
-          </li>
-        </ul>
-      </div>
-       End User -->
+                <li>
+                  <a href="#" class="text-custom">
+                    <i class="zmdi zmdi-power"></i>
+                  </a>
+                </li>
+              </ul>
+            </div>
+             End User -->
 
       <!--- Sidemenu -->
       <div id="sidebar-menu">
