--- a/src/app/client/client.component.html
+++ b/src/app/client/client.component.html
@@ -47,47 +47,62 @@
 <!-- end row -->
 
 
-<!--&lt;!&ndash;adding client form&ndash;&gt;-->
-<!--<div id="add-client-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"-->
-     <!--aria-hidden="true">-->
-  <!--<div class="modal-dialog modal-lg">-->
-    <!--<div class="modal-content">-->
-      <!--<div class="modal-header">-->
-        <!--<button type="button" class="close" aria-hidden="true"-->
-                <!--(click)="cleanAddClientModal()">X-->
-        <!--</button>-->
-        <!--<h4 class="modal-title" id="myModalLabel">Ajouter un client</h4></div>-->
-      <!--<div class="modal-body">-->
-        <!--<form class="form-horizontal">-->
-          <!--<label class="col-md-12"> <span class="help">Client</span></label>-->
-          <!--<div class="col-md-4">-->
-            <!--<input type="text" class="form-control form-control-line" placeholder="Nom"-->
-                   <!--[(ngModel)]="clientModal.name" name="name-client">-->
-          <!--</div>-->
-          <!--<div class="col-md-4">-->
-            <!--<input type="email" class="form-control form-control-line" placeholder="Email"-->
-                   <!--[(ngModel)]="clientModal.email" name="email-client">-->
-          <!--</div>-->
-          <!--<div class="col-md-4">-->
-            <!--<input type="number" class="form-control form-control-line" placeholder="Mobile"-->
-                   <!--[(ngModel)]="clientModal.mobile" name="mobile-client">-->
-          <!--</div>-->
-          <!--<div class="form-group" style="text-align: center">-->
-            <!--<button *ngIf="!validChampsClient()" disabled class="btn btn-danger" style="margin-top: 0.5%">Confirmer-->
-              <!--&nbsp;-->
-              <!--<div class="glyphicon glyphicon-chevron-right"></div>-->
-            <!--</button>-->
-            <!--<button *ngIf="validChampsClient()" class="btn btn-success" style="margin-top: 0.5%"-->
-                    <!--(click)="addClient()">Confirmer &nbsp;-->
-              <!--<div class="glyphicon glyphicon-chevron-right"></div>-->
-            <!--</button>-->
-          <!--</div>-->
-        <!--</form>-->
-      <!--</div>-->
-      <!--<div class="modal-footer">-->
-        <!--<button type="button" class="btn btn-info waves-effect" (click)="cleanAddClientModal()">Close-->
-        <!--</button>-->
-      <!--</div>-->
-    <!--</div>-->
-  <!--</div>-->
-<!--</div>-->
+<!--adding client form-->
+<div id="add-client-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+     aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" aria-hidden="true"
+                (click)="cleanAddClientModal()">X
+        </button>
+        <h4 class="modal-title" id="myModalLabel">Ajouter un client</h4></div>
+      <div class="modal-body">
+        <form class="form-horizontal">
+          <label class="col-md-12"> <span class="help">Client</span></label>
+          <div class="col-md-4">
+            <input type="text" class="form-control form-control-line" placeholder="Nom"
+                   [(ngModel)]="toAddClient.name" name="name-client">
+          </div>
+          <div class="col-md-4">
+            <input type="email" class="form-control form-control-line" placeholder="Email"
+                   [(ngModel)]="toAddClient.email" name="email-client">
+          </div>
+          <div class="col-md-4">
+            <input type="number" class="form-control form-control-line" placeholder="Mobile"
+                 [(ngModel)]="toAddClient.mobile" name="mobile-client">
+          </div>
+          <div class="col-md-4" style="margin-top: 2%">
+            <select [(ngModel)]="toAddClient.type" class="form-control" name="unitSelect">
+              <option *ngFor="let type of types, let i=index" [ngValue]="type">{{type.nom}}</option>
+            </select>
+          </div>
+          <div class="col-md-4" style="margin-top: 2%">
+            <select [(ngModel)]="selectedVille" class="form-control" name="unitSelect">
+              <option *ngFor="let ville of villes, let i=index" [ngValue]="ville">{{ville.nom}}</option>
+            </select>
+          </div>
+          <div class="col-md-4" style="margin-top: 2%">
+            <select [(ngModel)]="toAddClient.region" class="form-control" name="unitSelect">
+              <option *ngFor="let region of selectedVille.region, let i=index" [ngValue]="region">{{region.nom}}</option>
+            </select>
+          </div>
+          <div class="form-group" style="text-align: center">
+            <button *ngIf="!validChampsClient()" disabled class="btn btn-danger" style="margin-top: 0.5%">Confirmer
+              &nbsp;
+              <div class="glyphicon glyphicon-chevron-right"></div>
+            </button>
+            <button *ngIf="validChampsClient()" class="btn btn-success" style="margin-top: 0.5%"
+                    (click)="addClient()">Confirmer &nbsp;
+              <div class="glyphicon glyphicon-chevron-right"></div>
+            </button>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-info waves-effect" (click)="cleanAddClientModal()">Close
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
