add client done, still some minor bugs to be fixed in the review phase

--- a/src/app/client/client.component.html
+++ b/src/app/client/client.component.html
@@ -49,7 +49,7 @@
 
 <!--adding client form-->
 <div id="add-client-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
-     aria-hidden="true">
+     aria-hidden="true" *ngIf="villes">
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
       <div class="modal-header">
