--- a/src/app/livraison/list-livraison/list-livraison.component.html
+++ b/src/app/livraison/list-livraison/list-livraison.component.html
@@ -10,6 +10,30 @@
           </div>
         </div>
 
+        <div class="editable-responsive">
+          <table class="table table-striped" id="livraisons">
+            <thead>
+            <tr>
+              <th>ID</th>
+              <th>date</th>
+              <th>Montant</th>
+              <th>Client</th>
+              <th>Actions</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr class="gradeX" *ngFor="let l of livraisons, let i=index">
+              <td>{{l.livraison_id}}</td>
+              <td>{{l.date}}</td>
+              <td>{{l.montant}}</td>
+              <td>{{l.client.name}}</td>
+              <td class="actions">
+                <a href="#" class="on-default edit-row" data-toggle="modal" data-target="#list-op-modal"><i class="fa fa-align-left"></i></a> &nbsp;
+              </td>
+            </tr>
+            </tbody>
+          </table>
+        </div>
       </div>
     </div>
   </div>
