now you can see list of products for each livraison

--- a/src/app/livraison/list-livraison/list-livraison.component.html
+++ b/src/app/livraison/list-livraison/list-livraison.component.html
@@ -11,7 +11,7 @@
         </div>
 
         <div class="editable-responsive">
-          <table class="table table-striped" id="livraisons">
+          <table class="table table-striped" id="livraisons" *ngIf="livraisons">
             <thead>
             <tr>
               <th>ID</th>
@@ -28,12 +28,52 @@
               <td>{{l.montant}}</td>
               <td>{{l.client.name}}</td>
               <td class="actions">
-                <a href="#" class="on-default edit-row" data-toggle="modal" data-target="#list-op-modal"><i class="fa fa-align-left"></i></a> &nbsp;
+                <a href="#" class="on-default edit-row" data-toggle="modal" data-target="#list-prod-modal" (click)="selectLivrison(i)"><i class="fa fa-align-left"></i></a> &nbsp;
               </td>
             </tr>
             </tbody>
           </table>
         </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div id="list-prod-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" *ngIf="selectedLivraison">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">X</button>
+        <h4 class="modal-title" id="myModalLabel" >Liste de Produits de la Livraison de date {{selectedLivraison.date}}, de Montant {{selectedLivraison.montant}} au client {{selectedLivraison.client.name}}:</h4></div>
+      <div class="modal-body">
+        <div class="editable-responsive">
+          <table class="table table-striped" id="prods">
+            <thead>
+            <tr>
+              <th>Label</th>
+              <th>Reference</th>
+              <th>Code a barre</th>
+              <th>prix</th>
+              <th>recipient</th>
+              <th>emballage</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr *ngFor="let p of selectedLivraison.produits ; let i = index" role="row">
+              <td>{{p.produit.label}}</td>
+              <td>{{p.produit.reference}}</td>
+              <td>{{p.produit.codeABarre}}</td>
+              <td>{{p.produit.prix}}</td>
+              <td>{{p.produit.recipient.label}}</td>
+              <td>{{p.produit.emballage.label}}</td>
+            </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-info waves-effect" data-dismiss="modal" (click)="cleanAddMPModal()">Close
+        </button>
       </div>
     </div>
   </div>
