--- a/src/app/livraison/add-livraison/add-livraison.component.html
+++ b/src/app/livraison/add-livraison/add-livraison.component.html
@@ -40,9 +40,12 @@
         </select>
       </div>
       <div class="col-sm-3">
-        <input type="number" class="form-control" placeholder="Quantite" [(ngModel)]="p.quantite" name="quantite" >
+        <input type="number" class="form-control" placeholder="Quantite" [(ngModel)]="p.quantite" name="quantite{{i}}" >
       </div>
-      <div class="col-sm-4"></div>
+      <div class="col-sm-3">
+        <a class="btn btn-danger btn-primary waves-effect waves-light" style="margin-left: 1%" *ngIf="livraison.produits.length>1" (click)="removeCol(i)">
+          <div class="glyphicon glyphicon-remove"></div> &nbsp;Supprimer</a>
+      </div>
     </div>
     <div class="form-group">
       <div class="col-sm-5"></div>
