generate bon de commande works

--- a/src/app/vente/commande/list-commande/list-commande.component.html
+++ b/src/app/vente/commande/list-commande/list-commande.component.html
@@ -43,6 +43,8 @@
               <a [routerLink]="['/production/commande/'+commande.commande_id+'/edit']" class="text-inverse p-r-10"
                  data-toggle="tooltip" title="Edit">
                 <i class="ti-marker-alt"></i></a>
+              <a (click)="bon(i)" class="text-inverse p-r-10" data-toggle="tooltip" title="Bon de Commande">
+                <i class="ti-printer"></i></a>
             </td>
           </tr>
           </tbody>
