--- a/src/app/livraison/list-livraison/list-livraison.component.html
+++ b/src/app/livraison/list-livraison/list-livraison.component.html
@@ -29,6 +29,8 @@
               <td>{{l.client.name}}</td>
               <td class="actions">
                 <a href="#" class="on-default edit-row" data-toggle="modal" data-target="#list-prod-modal" (click)="selectLivrison(i)"><i class="fa fa-align-left"></i></a> &nbsp;
+                <a (click)="bon(i)" class="text-inverse p-r-10" data-toggle="tooltip" title="Bon de Commande">
+                  <i class="ti-printer"></i></a>
               </td>
             </tr>
             </tbody>
