Add facture works perfectly

--- a/src/app/facture/list-facture/list-facture.component.html
+++ b/src/app/facture/list-facture/list-facture.component.html
@@ -5,7 +5,7 @@
         <div class="row">
           <div class="col-sm-6">
             <div class="m-b-30">
-              <a id="addLivraison" class="btn btn-primary waves-effect waves-light" href="#/livraison/add">Enregistrer une Livraison <i class="fa fa-plus"></i></a>
+              <a id="addLivraison" class="btn btn-primary waves-effect waves-light" href="#/facture/add">Ajouter une facture <i class="fa fa-plus"></i></a>
             </div>
           </div>
         </div>
